issue-310/band-layout  - remove flex alignment prop that prevents cards from stretching; change width to max-width, adjust formatting of grid props, remove errant style from demo file

--- a/elements/pfe-band/src/pfe-band.scss
+++ b/elements/pfe-band/src/pfe-band.scss
@@ -110,7 +110,7 @@ $LOCAL: band;
     // Set up the flex styles for each region
     display:     flex;
     flex-flow:   column nowrap;
-    align-items: flex-start;
+    //align-items: flex-start;
     // Grid support styles
     @supports (display: grid) {
       grid-area: #{$grid-area};
@@ -148,8 +148,10 @@ $LOCAL: band;
     --pfe-band--gridTemplateArea_mobile: "body";
     // Styles for the different combination of regions
     &[pfe-has-aside] {
-      --pfe-band--gridTemplateArea_mobile: "body" "aside";
-      --pfe-band--gridTemplateArea_desktop: "body aside";
+      --pfe-band--gridTemplateArea_mobile:
+        "body" "aside";
+      --pfe-band--gridTemplateArea_desktop:
+        "body aside";
       @media (min-width: #{pfe-breakpoint(md)}) {
         --pfe-band--layout: 1fr #{pfe-local(Width__aside--sm)};
       }
@@ -157,10 +159,12 @@ $LOCAL: band;
         --pfe-band--layout: 1fr #{pfe-local(Width__aside--lg)};
       }
       &[pfe-aside-mobile="top"] {
-        --pfe-band--gridTemplateArea_mobile: "aside" "body";
+        --pfe-band--gridTemplateArea_mobile:
+          "aside" "body";
       }
       &[pfe-aside-desktop="left"] {
-        --pfe-band--gridTemplateArea_desktop: "aside body";
+        --pfe-band--gridTemplateArea_desktop:
+          "aside body";
         @media (min-width: #{pfe-breakpoint(md)}) {
           --pfe-band--layout: #{pfe-local(Width__aside--sm)} 1fr;
         }
@@ -170,66 +174,119 @@ $LOCAL: band;
       }
     }
     &[pfe-has-header] {
-      --pfe-band--gridTemplateArea_mobile: "header" "body";
+      --pfe-band--gridTemplateArea_mobile:
+        "header" "body";
       &[pfe-has-aside] {
-        --pfe-band--gridTemplateArea_mobile: "header" "body" "aside";
-        --pfe-band--gridTemplateArea_desktop: "header header" "body aside";
+        --pfe-band--gridTemplateArea_mobile:  
+          "header" 
+          "body" "aside";
+        --pfe-band--gridTemplateArea_desktop: 
+          "header header" 
+          "body aside";
       }
       &[pfe-aside-mobile="top"] {
-        --pfe-band--gridTemplateArea_mobile: "aside" "header" "body";
+        --pfe-band--gridTemplateArea_mobile:  
+          "aside" 
+          "header" 
+          "body";
       }
       &[pfe-aside-height="full"] {
-        --pfe-band--gridTemplateArea_desktop: "header aside" "body aside";
+        --pfe-band--gridTemplateArea_desktop:
+          "header aside"
+          "body aside";
       }
       &[pfe-aside-desktop="left"] {
-        --pfe-band--gridTemplateArea_desktop: "header header" "aside body";
+        --pfe-band--gridTemplateArea_desktop:
+          "header header"
+          "aside body";
         &[pfe-aside-height="full"] {
-          --pfe-band--gridTemplateArea_desktop: "aside header" "aside body";
+          --pfe-band--gridTemplateArea_desktop:
+            "aside header"
+            "aside body";
         }
       }
     }
     &[pfe-has-footer] {
-      --pfe-band--gridTemplateArea_mobile: "body" "footer";
+      --pfe-band--gridTemplateArea_mobile:
+        "body"
+        "footer";
       &[pfe-has-aside] {
-        --pfe-band--gridTemplateArea_mobile: "body" "aside" "footer";
-        --pfe-band--gridTemplateArea_desktop: "body aside" "footer footer";
+        --pfe-band--gridTemplateArea_mobile:
+          "body"
+          "aside"
+          "footer";
+        --pfe-band--gridTemplateArea_desktop:
+          "body aside"
+          "footer footer";
       }
       &[pfe-aside-mobile="top"] {
-        --pfe-band--gridTemplateArea_mobile: "aside" "body" "footer";
+        --pfe-band--gridTemplateArea_mobile:
+          "aside"
+          "body"
+          "footer";
       }
       &[pfe-aside-height="full"] {
-        --pfe-band--gridTemplateArea_desktop: "body aside" "footer aside" ;
+        --pfe-band--gridTemplateArea_desktop:
+          "body aside"
+          "footer aside" ;
       }
       &[pfe-aside-desktop="left"] {
-        --pfe-band--gridTemplateArea_desktop: "aside body" "footer footer";
+        --pfe-band--gridTemplateArea_desktop:
+          "aside body"
+          "footer footer";
         &[pfe-aside-height="full"] {
-          --pfe-band--gridTemplateArea_desktop: "aside body" "aside footer";
+          --pfe-band--gridTemplateArea_desktop:
+            "aside body"
+            "aside footer";
         }
       }
     }
     &[pfe-has-header][pfe-has-footer] {
-      --pfe-band--gridTemplateArea_mobile: "header" "body" "footer";
+      --pfe-band--gridTemplateArea_mobile:
+        "header"
+        "body"
+        "footer";
       &[pfe-has-aside] {
-        --pfe-band--gridTemplateArea_mobile: "header" "body" "footer" "aside";
-        --pfe-band--gridTemplateArea_desktop: "header header" "body aside" "footer footer";
+        --pfe-band--gridTemplateArea_mobile:
+          "header"
+          "body"
+          "footer"
+          "aside";
+        --pfe-band--gridTemplateArea_desktop:
+          "header header"
+          "body aside"
+          "footer footer";
       }
       &[pfe-aside-mobile="top"] {
-        --pfe-band--gridTemplateArea_mobile: "aside" "header" "body" "footer";
+        --pfe-band--gridTemplateArea_mobile:
+          "aside"
+          "header"
+          "body"
+          "footer";
       }
       &[pfe-aside-height="full"] {
-        --pfe-band--gridTemplateArea_desktop: "header aside" "body aside" "footer aside" ;
+        --pfe-band--gridTemplateArea_desktop:
+          "header aside"
+          "body aside"
+          "footer aside" ;
       }
       &[pfe-aside-desktop="left"] {
-        --pfe-band--gridTemplateArea_desktop: "header header" "aside body" "footer footer";
+        --pfe-band--gridTemplateArea_desktop:
+          "header header"
+          "aside body"
+          "footer footer";
         &[pfe-aside-height="full"] {
-          --pfe-band--gridTemplateArea_desktop: "aside header" "aside body" "aside footer";
+          --pfe-band--gridTemplateArea_desktop:
+            "aside header"
+            "aside body"
+            "aside footer";
         }
       }
     }
 
     position:  relative;
     margin:    0 auto;
-    width: #{pfe-local(Width)};
+    max-width: #{pfe-local(Width)};
     
     // Grid support styles
     @supports (display: grid) {
